# python-project-template

./: .flake8  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci-test.yaml
python_project/: __init__.py
python_project/utils/: logger.py
tests/: test_add.py
