[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["Kajago <jangsc0000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.942"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
show_error_context = "True"
show_column_numbers = "True"
show_error_codes = "True"
pretty = "True"
